--- a/variants/v2.4.4-alpine-3.7/Dockerfile
+++ b/variants/v2.4.4-alpine-3.7/Dockerfile
@@ -1,8 +1,14 @@
+
+
 FROM alpine:3.7
 
 RUN apk add --no-cache openvpn=2.4.4-r1 iptables
 
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
+COPY openvpn /etc/openvpn
+RUN chown -R root:root /etc/openvpn && chmod 750 /etc/openvpn
 
-
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
