--- a/variants/v2.4.6-alpine-3.9/Dockerfile
+++ b/variants/v2.4.6-alpine-3.9/Dockerfile
@@ -1,8 +1,14 @@
+
+
 FROM alpine:3.9
 
 RUN apk add --no-cache openvpn=2.4.6-r4 iptables
 
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
+COPY openvpn /etc/openvpn
+RUN chown -R root:root /etc/openvpn && chmod 750 /etc/openvpn
 
-
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
