--- a/variants/v2.4.8-alpine-3.11/docker-compose.yml
+++ b/variants/v2.4.8-alpine-3.11/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 services:
   openvpn:
     container_name: openvpn
@@ -7,6 +7,12 @@ services:
       - "1194:1194/udp"
     cap_add:
       - NET_ADMIN
+    # sysctls for the container if it is not set on the host. See: https://docs.docker.com/compose/compose-file/compose-file-v2/#sysctls
+    sysctls:
+      - net.ipv4.conf.all.forwarding=1
+      # - net.ipv6.conf.all.disable_ipv6=0
+      # - net.ipv6.conf.default.forwarding=1
+      # - net.ipv6.conf.all.forwarding=1
     restart: unless-stopped
     volumes:
       - ./openvpn/server.conf:/etc/openvpn/server.conf
