--- a/variants/v2.4.7-alpine-3.10/openvpn/server.conf
+++ b/variants/v2.4.7-alpine-3.10/openvpn/server.conf
@@ -9,7 +9,7 @@ dh pki/dh.pem
 crl-verify pki/crl.pem
 server 10.8.0.0 255.255.255.0
 ifconfig-pool-persist ipp.txt
-client-config-dir ccd
+;client-config-dir ccd
 keepalive 10 120
 tls-auth pki/ta.key 0
 cipher AES-256-CBC
