--- a/variants/v2.4.6-alpine-3.9/Dockerfile
+++ b/variants/v2.4.6-alpine-3.9/Dockerfile
@@ -8,7 +8,7 @@ COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
 COPY openvpn /etc/openvpn
-RUN chown -R root:root /etc/openvpn && chmod 750 /etc/openvpn
+RUN chown -R root:root /etc/openvpn && chmod 750 /etc/openvpn && chmod 750 /etc/openvpn/*.sh
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
