Docs: Add environment variables to `docker-compose.yml` example

--- a/variants/v2.4.12-alpine-3.12/docker-compose.yml
+++ b/variants/v2.4.12-alpine-3.12/docker-compose.yml
@@ -3,6 +3,12 @@ services:
   openvpn:
     container_name: openvpn
     image: theohbrothers/docker-openvpn:v2.4.12-alpine-3.12
+    environment:
+      - OPENVPN_SERVER_CONFIG_FILE=/etc/openvpn/server.conf
+      # - CUSTOM_FIREWALL_SCRIPT=/etc/openvpn/firewall.sh
+    volumes:
+      - ./openvpn/server.conf:/etc/openvpn/server.conf
+      # - ./openvpn/firewall.sh:/etc/openvpn/firewall.sh
     ports:
       - "1194:1194/udp"
     cap_add:
@@ -14,5 +20,3 @@ services:
       # - net.ipv6.conf.default.forwarding=1
       # - net.ipv6.conf.all.forwarding=1
     restart: unless-stopped
-    volumes:
-      - ./openvpn/server.conf:/etc/openvpn/server.conf
