--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -10,6 +10,27 @@ on:
     branches:
     - master
 jobs:
+  test-nogitdiff:
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/powershell:7.2.2-alpine-3.14-20220318
+    steps:
+    - run: |
+        apk add --no-cache git
+    - uses: actions/checkout@v3
+    - name: Ignore git permissions
+      run: |
+        git config --global --add safe.directory "$( pwd )"
+    - name: Generate variants
+      run: |
+        pwsh -Command '
+        $ErrorActionPreference = "Stop"
+        Install-Module -Name Generate-DockerImageVariants -Force -Scope CurrentUser -Verbose
+        Generate-DockerImageVariants .
+        '
+    - name: Test - no git diff
+      run: |
+        git diff --exit-code
 
   build-v2-5-6-alpine-3-13:
     runs-on: ubuntu-latest
@@ -1535,3 +1556,17 @@ jobs:
           tag: ${{ github.ref_name }} # E.g. 'master' or 'v1.2.3'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  update-dockerhub-description:
+    needs: [build-v2-5-6-alpine-3-13, build-v2-4-12-alpine-3-12, build-v2-4-11-alpine-3-11, build-v2-4-11-alpine-3-10, build-v2-4-6-alpine-3-9, build-v2-4-6-alpine-3-8, build-v2-4-4-alpine-3-7, build-v2-4-4-alpine-3-6, build-v2-3-18-alpine-3-5, build-v2-3-18-alpine-3-4, build-v2-3-18-alpine-3-3]
+    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Docker Hub Description
+      uses: peter-evans/dockerhub-description@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        password: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+        repository: ${{ github.repository }}
+        short-description: ${{ github.event.repository.description }}
