--- a/variants/v2.3.18-alpine-3.4/docker-compose.yml
+++ b/variants/v2.3.18-alpine-3.4/docker-compose.yml
@@ -1,15 +1,18 @@
 version: '2.1'
 services:
   openvpn-server:
-    image: theohbrothers/docker-openvpn:v2.3.18-alpine-3.4
+    build:
+      dockerfile: Dockerfile
+      context: .
     environment:
       - OPENVPN_CONFIG_FILE=/etc/openvpn/server.conf
+      - NAT_MASQUERADE=1
       # - CUSTOM_FIREWALL_SCRIPT=/etc/openvpn/firewall.sh
     volumes:
       - ./openvpn/server.conf:/etc/openvpn/server.conf
       # - ./openvpn/firewall.sh:/etc/openvpn/firewall.sh
     ports:
-      - "1194:1194/udp"
+      - 1194:1194/udp
     cap_add:
       - NET_ADMIN
     # sysctls for the container if it is not set on the host. See: https://docs.docker.com/compose/compose-file/compose-file-v2/#sysctls
@@ -21,7 +24,9 @@ services:
     restart: unless-stopped
 
   openvpn-client:
-    image: theohbrothers/docker-openvpn:v2.3.18-alpine-3.4
+    build:
+      dockerfile: Dockerfile
+      context: .
     environment:
       - OPENVPN_CONFIG_FILE=/etc/openvpn/client.conf
       - NAT_MASQUERADE=0
