Refactor (ci): Use range constraint in `apk add` for simpler versions

--- a/variants/v2.4.11-alpine-3.11/Dockerfile
+++ b/variants/v2.4.11-alpine-3.11/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.11
 
-RUN apk add --no-cache openvpn=2.4.11-r0 iptables
+RUN apk add --no-cache openvpn~=2.4.11 iptables
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
