--- a/variants/v2.3.18-alpine-3.4/Dockerfile
+++ b/variants/v2.3.18-alpine-3.4/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.4
 
-RUN apk add --no-cache openvpn=2.3.18-r0 iptables
+RUN apk add --no-cache openvpn>=2.3.18 iptables
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
