--- a/variants/v2.4.6-alpine-3.8/Dockerfile
+++ b/variants/v2.4.6-alpine-3.8/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.8
 
-RUN apk add --no-cache openvpn=2.4.6-r3 iptables
+RUN apk add --no-cache openvpn~=2.4.6 iptables
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
