--- a/variants/v2.5.8-alpine-3.17/Dockerfile
+++ b/variants/v2.5.8-alpine-3.17/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.17
 
-RUN apk add --no-cache openvpn=2.5.8-r0 iptables
+RUN apk add --no-cache openvpn~=2.5.8 iptables
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
