--- a/variants/v2.6.5-alpine-3.18/Dockerfile
+++ b/variants/v2.6.5-alpine-3.18/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.18
 
-RUN apk add --no-cache openvpn=2.6.5-r0 iptables
+RUN apk add --no-cache openvpn~=2.6.5 iptables
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
