Fix: Fix testing `openvpn` in Dockerfile

--- a/variants/2.3.18-alpine-3.5/Dockerfile
+++ b/variants/2.3.18-alpine-3.5/Dockerfile
@@ -1,8 +1,9 @@
 FROM alpine:3.5
 
 RUN set -eux; \
-    apk add --no-cache openvpn>=2.3.18 iptables \
-    openvpn --version
+    apk add --no-cache openvpn>=2.3.18 iptables; \
+    # Workaround openvpn --version exiting with non-zero exit code on openvpn <= 2.4.x
+    openvpn --version | grep -A100 -B100 2.3.18
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
