--- a/variants/2.6.5-alpine-3.18/Dockerfile
+++ b/variants/2.6.5-alpine-3.18/Dockerfile
@@ -1,8 +1,9 @@
 FROM alpine:3.18
 
 RUN set -eux; \
-    apk add --no-cache openvpn~=2.6.5 iptables \
-    openvpn --version
+    apk add --no-cache openvpn~=2.6.5 iptables; \
+    # Workaround openvpn --version exiting with non-zero exit code on openvpn <= 2.4.x
+    openvpn --version | grep -A100 -B100 2.6.5
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
